--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+    <header class="masthead" style="background-image: urlhttps://www.walldevil.com/wallpapers/a79/wallpapers-online-animation-powerpoint-art-animated-blackjack-casino-slots-bestwallpapers-definition-high-eve-screen-wallfile-savers-tribal.jpg"> <!--('img/home-bg.jpg')-->
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
               <h1>Puente al mañana</h1>
-              <span class="subheading">F</span>
+              <span class="subheading">El futuro se construye día a día</span>
             </div>
           </div>
         </div>
