--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <hr>
           <!-- Pager -->
           <div class="clearfix">
-            <a class="btn btn-primary float-right" href="#">Older Posts &rarr;</a>
+            <a class="btn btn-primary float-right" href="#">Todos los artículos &rarr;</a>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; Your Website 2017</p>
+            <p class="copyright text-muted">Copyright &copy; Puente al Mañana 2018</p>
           </div>
         </div>
       </div>
