--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="about.html">Sobre la web</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Articulos">Artículos</a>
+              <a class="nav-link" href="Articulos.html">Artículos</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Cl</a>
