--- a/Articulos.html
+++ b/Articulos.html
@@ -59,8 +59,8 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Puente al mañana</h1>
-              <span class="subheading">El futuro se construye día a día</span>
+              <h1>Artículos</h1>
+              <span class="subheading">Lista de artículos</span>
             </div>
           </div>
         </div>
